--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dnspython==2.7.0
 filelock==3.17.0
 Flask==3.1.0
 fsspec==2025.2.0
+gunicorn
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -53,3 +54,4 @@ typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 Werkzeug==3.1.3
+
